--- a/The Vibe/Base.lproj/Main.storyboard
+++ b/The Vibe/Base.lproj/Main.storyboard
@@ -778,10 +778,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NiO-Jm-Zw1">
-                                <rect key="frame" x="16" y="0.0" width="343" height="667"/>
+                                <rect key="frame" x="16" y="44" width="343" height="623"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YUp-rO-DLY">
-                                        <rect key="frame" x="0.0" y="0.0" width="343" height="667"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="623"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="g89-nK-WIh">
                                                 <rect key="frame" x="15" y="0.0" width="320" height="30"/>
@@ -932,10 +932,10 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VM5-SN-oWu">
-                                                <rect key="frame" x="15" y="247" width="320" height="128"/>
+                                                <rect key="frame" x="15" y="247" width="320" height="120"/>
                                                 <subviews>
-                                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="asdgfads" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="m2B-5j-YWd">
-                                                        <rect key="frame" x="29" y="-1" width="262" height="130"/>
+                                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="m2B-5j-YWd">
+                                                        <rect key="frame" x="0.0" y="-1" width="320" height="122"/>
                                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -945,13 +945,14 @@
                                                     <constraint firstItem="m2B-5j-YWd" firstAttribute="centerX" secondItem="VM5-SN-oWu" secondAttribute="centerX" id="10s-wd-TEq"/>
                                                     <constraint firstAttribute="bottom" secondItem="m2B-5j-YWd" secondAttribute="bottom" constant="2" id="Q6j-2h-2Zs"/>
                                                     <constraint firstItem="m2B-5j-YWd" firstAttribute="top" secondItem="VM5-SN-oWu" secondAttribute="top" constant="-1" id="Yux-YT-Dcn"/>
-                                                    <constraint firstAttribute="trailing" secondItem="m2B-5j-YWd" secondAttribute="trailing" constant="29" id="Zge-o8-hih"/>
+                                                    <constraint firstAttribute="trailing" secondItem="m2B-5j-YWd" secondAttribute="trailing" id="Zge-o8-hih"/>
                                                     <constraint firstItem="m2B-5j-YWd" firstAttribute="centerY" secondItem="VM5-SN-oWu" secondAttribute="centerY" id="iey-Hn-8rX"/>
-                                                    <constraint firstItem="m2B-5j-YWd" firstAttribute="leading" secondItem="VM5-SN-oWu" secondAttribute="leading" constant="29" id="yXI-jg-Z27"/>
+                                                    <constraint firstAttribute="height" constant="120" id="xHc-aW-yDu"/>
+                                                    <constraint firstItem="m2B-5j-YWd" firstAttribute="leading" secondItem="VM5-SN-oWu" secondAttribute="leading" id="yXI-jg-Z27"/>
                                                 </constraints>
                                             </scrollView>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="BQw-oy-MfS">
-                                                <rect key="frame" x="15" y="383" width="320" height="290"/>
+                                                <rect key="frame" x="15" y="375" width="320" height="290"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="owC-wI-4hK">
                                                         <rect key="frame" x="0.0" y="0.0" width="320" height="25"/>
@@ -1011,7 +1012,6 @@
                                             <constraint firstItem="V5m-xR-bK7" firstAttribute="top" secondItem="815-6k-l8b" secondAttribute="bottom" constant="7" id="cEo-qC-1cA"/>
                                             <constraint firstItem="VM5-SN-oWu" firstAttribute="trailing" secondItem="J4n-TN-LCs" secondAttribute="trailing" id="eah-K8-hNQ"/>
                                             <constraint firstItem="tfh-hO-s60" firstAttribute="top" secondItem="g89-nK-WIh" secondAttribute="bottom" constant="8" symbolic="YES" id="fPc-hT-Wgv"/>
-                                            <constraint firstAttribute="bottom" secondItem="VM5-SN-oWu" secondAttribute="bottom" constant="292" id="k9h-FE-skb"/>
                                             <constraint firstItem="VM5-SN-oWu" firstAttribute="leading" secondItem="J4n-TN-LCs" secondAttribute="leading" id="n5Z-t4-ClZ"/>
                                             <constraint firstItem="Bz0-p9-XQu" firstAttribute="leading" secondItem="g89-nK-WIh" secondAttribute="leading" id="pd1-hC-gG2"/>
                                             <constraint firstItem="V5m-xR-bK7" firstAttribute="leading" secondItem="815-6k-l8b" secondAttribute="leading" id="pnA-vF-VCQ"/>
