--- a/The Vibe/Base.lproj/Main.storyboard
+++ b/The Vibe/Base.lproj/Main.storyboard
@@ -725,7 +725,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="iSp-NT-t3R">
-                                <rect key="frame" x="0.0" y="20" width="375" height="29"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="29"/>
                                 <segments>
                                     <segment title="My Sign Ups"/>
                                     <segment title="My Events"/>
@@ -736,8 +736,27 @@
                                 </connections>
                             </segmentedControl>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0oQ-ah-iR0">
-                                <rect key="frame" x="0.0" y="49" width="375" height="618"/>
+                                <rect key="frame" x="0.0" y="93" width="375" height="574"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="meCell" textLabel="4Uw-pQ-iKo" style="IBUITableViewCellStyleDefault" id="ulP-RL-Hkl">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ulP-RL-Hkl" id="MVJ-hp-TLo">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="4Uw-pQ-iKo">
+                                                    <rect key="frame" x="15" y="0.0" width="345" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -777,11 +796,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NiO-Jm-Zw1">
-                                <rect key="frame" x="16" y="44" width="343" height="623"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NiO-Jm-Zw1">
+                                <rect key="frame" x="16" y="64" width="343" height="603"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YUp-rO-DLY">
-                                        <rect key="frame" x="0.0" y="0.0" width="343" height="623"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="603"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="g89-nK-WIh">
                                                 <rect key="frame" x="15" y="0.0" width="320" height="30"/>
@@ -932,10 +951,10 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VM5-SN-oWu">
-                                                <rect key="frame" x="15" y="247" width="320" height="120"/>
+                                                <rect key="frame" x="15" y="247" width="320" height="60"/>
                                                 <subviews>
                                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="m2B-5j-YWd">
-                                                        <rect key="frame" x="0.0" y="-1" width="320" height="122"/>
+                                                        <rect key="frame" x="0.0" y="-1" width="320" height="62"/>
                                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -947,15 +966,15 @@
                                                     <constraint firstItem="m2B-5j-YWd" firstAttribute="top" secondItem="VM5-SN-oWu" secondAttribute="top" constant="-1" id="Yux-YT-Dcn"/>
                                                     <constraint firstAttribute="trailing" secondItem="m2B-5j-YWd" secondAttribute="trailing" id="Zge-o8-hih"/>
                                                     <constraint firstItem="m2B-5j-YWd" firstAttribute="centerY" secondItem="VM5-SN-oWu" secondAttribute="centerY" id="iey-Hn-8rX"/>
-                                                    <constraint firstAttribute="height" constant="120" id="xHc-aW-yDu"/>
+                                                    <constraint firstAttribute="height" constant="60" id="xHc-aW-yDu"/>
                                                     <constraint firstItem="m2B-5j-YWd" firstAttribute="leading" secondItem="VM5-SN-oWu" secondAttribute="leading" id="yXI-jg-Z27"/>
                                                 </constraints>
                                             </scrollView>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="BQw-oy-MfS">
-                                                <rect key="frame" x="15" y="375" width="320" height="290"/>
+                                                <rect key="frame" x="15" y="315" width="320" height="270"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="owC-wI-4hK">
-                                                        <rect key="frame" x="0.0" y="0.0" width="320" height="25"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="320" height="5"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" constant="320" id="jdP-U0-nxl"/>
                                                         </constraints>
@@ -964,7 +983,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" alpha="0.5" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="5As-7F-orL">
-                                                        <rect key="frame" x="0.0" y="35" width="320" height="195"/>
+                                                        <rect key="frame" x="0.0" y="15" width="320" height="195"/>
                                                         <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="195" id="Ab1-Hq-kut"/>
@@ -974,7 +993,7 @@
                                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                                     </textView>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FwA-Ij-aHg">
-                                                        <rect key="frame" x="0.0" y="240" width="320" height="50"/>
+                                                        <rect key="frame" x="0.0" y="220" width="320" height="50"/>
                                                         <color key="backgroundColor" red="1" green="0.69027781639999997" blue="0.35147169789999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="50" id="IoC-2q-wr0"/>
@@ -989,7 +1008,7 @@
                                                     </button>
                                                 </subviews>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="290" id="PDj-Fy-oJB"/>
+                                                    <constraint firstAttribute="height" constant="270" id="PDj-Fy-oJB"/>
                                                     <constraint firstAttribute="width" constant="320" id="aGL-TT-3AJ"/>
                                                     <constraint firstItem="5As-7F-orL" firstAttribute="top" secondItem="owC-wI-4hK" secondAttribute="bottom" constant="10" id="nWO-rv-dj6"/>
                                                 </constraints>
@@ -1033,7 +1052,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="NiO-Jm-Zw1" firstAttribute="top" secondItem="FDf-yK-yhj" secondAttribute="bottom" constant="-20" id="Fug-yT-aI8"/>
+                            <constraint firstItem="NiO-Jm-Zw1" firstAttribute="top" secondItem="FDf-yK-yhj" secondAttribute="bottom" id="Fug-yT-aI8"/>
                             <constraint firstItem="7mQ-tg-W1j" firstAttribute="top" secondItem="NiO-Jm-Zw1" secondAttribute="bottom" id="OdB-0Y-RGJ"/>
                             <constraint firstItem="NiO-Jm-Zw1" firstAttribute="leading" secondItem="2vb-gV-M4e" secondAttribute="leadingMargin" id="TvS-ra-4UU"/>
                             <constraint firstItem="NiO-Jm-Zw1" firstAttribute="trailing" secondItem="2vb-gV-M4e" secondAttribute="trailingMargin" id="VIO-z4-UbH"/>
@@ -1169,7 +1188,7 @@
     <inferredMetricsTieBreakers>
         <segue reference="n7d-Gt-H4d"/>
         <segue reference="Jm8-pQ-lTF"/>
-        <segue reference="2Ed-lB-38z"/>
+        <segue reference="wTr-sX-rWA"/>
         <segue reference="G9Q-LU-CUb"/>
     </inferredMetricsTieBreakers>
 </document>
