--- a/The Vibe/Base.lproj/Main.storyboard
+++ b/The Vibe/Base.lproj/Main.storyboard
@@ -251,7 +251,7 @@
                                     <constraint firstAttribute="height" constant="44" id="Suy-JD-pdN"/>
                                     <constraint firstAttribute="width" constant="375" id="eQ4-oo-jaE"/>
                                 </constraints>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" returnKeyType="go"/>
                             </searchBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="YAt-96-bRS">
                                 <rect key="frame" x="0.0" y="157" width="375" height="510"/>
@@ -284,6 +284,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="theSearchBar" destination="6vt-TW-3T5" id="01J-ld-Ogc"/>
                         <outlet property="theTableView" destination="YAt-96-bRS" id="63C-JF-fiB"/>
                         <segue destination="vH4-K9-BBO" kind="show" identifier="communityToDetail" id="Ff9-2E-KzM"/>
                     </connections>
@@ -1160,8 +1161,8 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="Vrf-5d-Aq0"/>
+        <segue reference="Ff9-2E-KzM"/>
         <segue reference="n7d-Gt-H4d"/>
-        <segue reference="wTr-sX-rWA"/>
         <segue reference="G9Q-LU-CUb"/>
     </inferredMetricsTieBreakers>
 </document>
